2005-07-05  David Kastrup  <dak@gnu.org>

	* preview.el (preview-string-expand): Allow substrings to be
	controlled by booleans.
	(preview-expandable-string): Adapt type to that.
	(preview-required-option-list): Make dependent on
	`preview-preserve-counters'.
	(preview-preserve-counters): New boolean.

2005-06-30  jalar  <jalar@mai.liu.se>

	* latex/preview.dtx: <tightpage>: added comments

2005-06-28  Jan-Ake Larsson  <jalar@mai.liu.se>

	* latex/preview.dtx: Add version number in a \special, in dvips
	mode. Fix mismatched parantheses.

2005-06-27  David Kastrup  <dak@gnu.org>

	* latex/preview.dtx: Put version into `\pr@version'.

2005-06-27  Jan-Ake Larsson  <jalar@mai.liu.se>

	* latex/preview.dtx: Add backwards-compatibility for dvipng <= 1.5

	* latex/preview.dtx: Add preview@tightpage

2005-06-24  David Kastrup  <dak@gnu.org>

	* prv-install.el (preview-make-package-xemacs): Add author-version.

	* preview.el (preview-TeX-style-dir): Change docs.

	* latex/Makefile.in (preview.dvi): Depend on preview.sty
	(preview.pdf): Same here.

	* configure.ac: Remove checks for PERL and info-related stuff.
	Add . into search path first.

	* Makefile.in (texmf): Depend on latex/Makefile
	(latex/Makefile, auto.el, configure, Makefile, config.status):
	targets to make sure that Makefile and stuff are up to date.
	(install-metadata): pass author version into prv-install.el

2005-06-21  Ralf Angeli  <angeli@iwi.uni-sb.de>

	* configure.ac: Make message at end of configuration clearer.
	Remove redundant build hint.

	* .cvsignore: Remove irrelevant entries.

2005-06-21  David Kastrup  <dak@gnu.org>

	* configure.ac: correct comparison.

2005-06-20  David Kastrup  <dak@gnu.org>

	* RELEASE: Remove (folded into ../RELEASE).

2005-06-18  David Kastrup  <dak@gnu.org>

	* preview.el (preview-gs-dvips-process-setup)
	(preview-dvipng-process-setup): Improve error message.
	(preview-parse-messages): Don't throw error on nil parsestate if
	we are in error unwinding mode already.
